# gazelle_oci

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MODULE.bazel  README.md  expr.go  go.mod  go.sum  lang.go
examples/go/: BUILD.bazel  MODULE.bazel  bazel-bin  bazel-go  bazel-out  bazel-testlogs  test.yaml
gazelle/: BUILD.bazel  config.go  lang.go  resolve.go
internal/module/: BUILD.bazel  module.go
internal/rule/: BUILD.bazel  expr.go
testdata/: BUILD.bazel
testdata/oci_go_image/: BUILD.in  BUILD.out  main.go
testdata/oci_go_image/cmd/app/: BUILD.out
