load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

# gazelle:exclude testdata/*
# gazelle:exclude examples/*

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_binary",
)

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES + ["//:gazelle_oci"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "gazelle_oci",
    srcs = ["lang.go"],
    importpath = "github.com/pedrobarco/gazelle_oci",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/module",
        "//internal/rule",
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//label:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//repo:go_default_library",
        "@bazel_gazelle//resolve:go_default_library",
        "@bazel_gazelle//rule:go_default_library",
    ],
)
