load("@gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@rules_go//go:def.bzl", "go_library")

# gazelle:exclude testdata/*
# gazelle:exclude examples/*

gazelle(name = "gazelle")

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES + ["//:gazelle_oci"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "gazelle_oci",
    srcs = ["lang.go"],
    importpath = "github.com/pedrobarco/gazelle_oci",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/module",
        "//internal/rule",
        "@gazelle//config:go_default_library",
        "@gazelle//label:go_default_library",
        "@gazelle//language:go_default_library",
        "@gazelle//repo:go_default_library",
        "@gazelle//resolve:go_default_library",
        "@gazelle//rule:go_default_library",
    ],
)
