load("@gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")

# gazelle:exclude testdata/*
# gazelle:exclude examples/*

gazelle(name = "gazelle")

gazelle_binary(
    name = "gazelle_binary",
    languages = DEFAULT_LANGUAGES + ["//gazelle"],
    visibility = ["//visibility:public"],
)
