load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle_binary", "gazelle_generation_test")

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES + [
        "//:gazelle_oci",
    ],
)

[
    gazelle_generation_test(
        name = file[0:-len("/WORKSPACE")],
        gazelle_binary = ":gazelle_bin",
        gazelle_timeout_seconds = 30,
        test_data = glob(
            include = [file[0:-len("/WORKSPACE")] + "/**"],
        ),
    )
    for file in glob(["**/WORKSPACE"])
]
