load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

gazelle_binary(
    name = "gazelle_bin",
    languages = DEFAULT_LANGUAGES + [
        "@com_github_pedrobarco_gazelle_oci//:gazelle_oci",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

go_library(
    name = "m_lib",
    srcs = ["main.go"],
    importpath = "example.com/m",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "m",
    embed = [":m_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "m_layer",
    srcs = [":m"],
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/m"],
    tars = [":m_layer"],
)
