load("@aspect_bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@container_structure_test//:defs.bzl", "container_structure_test")
load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# gazelle:oci_base_image go @distroless_base

gazelle(
    name = "gazelle",
    gazelle = "@com_github_pedrobarco_gazelle_oci//:gazelle_binary",
)

go_library(
    name = "m_lib",
    srcs = ["main.go"],
    importpath = "example.com/m",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "m",
    embed = [":m_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "m_layer",
    srcs = [":m"],
)

oci_image(
    name = "image",
    base = "@distroless_base//:distroless_base",
    entrypoint = ["/m"],
    tars = [":m_layer"],
)

platform_transition_filegroup(
    name = "transitioned_image",
    srcs = [":image"],
    target_platform = select({
        "@platforms//cpu:arm64": "@rules_go//go/toolchain:linux_arm64",
        "@platforms//cpu:x86_64": "@rules_go//go/toolchain:linux_amd64",
    }),
)

oci_tarball(
    name = "tarball",
    image = ":transitioned_image",
    repo_tags = ["m:latest"],
)

container_structure_test(
    name = "test",
    configs = ["test.yaml"],
    image = ":image",
)
